# snake-ai

./: .gitignore  agent.py  agent_V1.py  digital_twin_paper.ipynb  draft.py  game.py  game_V1.py  game_V2.py  model.py  phiflow_overview.ipynb  project_overview.ipynb  pyproject.toml  requirements.txt  snake-ai.yml  snake.py  snake_ai.py  snake_game.py  snake_game_V1.py  snake_game_V2.py  snake_game_ai.py  snake_game_human.py  utils.py  warp_overview.ipynb
config/: env_cpu.yml  env_gpu.yml  environment.yml  snake-env.yml
docs/source/: conf.py  index.rst  usage.rst
src/: agent.py  draft.py  snake.py  snake_ai.py  snake_game.py  snake_game_ai.py
src/envs/: line.py  snake.py  snake_2d_env.py  utils.py
src/models/: linear_Qnet.py  pointnet.py
src/snake_ai/: __init__.py  taichi_exemple.py
src/snake_ai/diffsim/: __init__.py  boxes.py  diffusion.py  field.py  finite_difference.py  lung.py  main.py  maths.py  potential_field_exemple.py  taichi_sim.py  walk_simulation.py
src/snake_ai/envs/: __init__.py  agent.py  converter.py  geometry.py  grid_world.py  grid_world_3d.py  line.py  maze_generator.py  maze_grid.py  random_obstacles_3d.py  random_obstacles_env.py  room_escape.py  slot_env.py  snake.py  snake_2d_env.py  snake_base_env.py  snake_classic_env.py  snake_env.py  snake_goal_env.py  snake_lines_env.py  utils.py  walker.py
tests/: test_envs.py  test_io.py  test_physim.py  test_snake_env.py  test_snakes.py  test_wrappers.py
tests/data/: env_write.json  environment.json
tests/test_envs/: test_agents.py  test_environments.py  test_geometry.py
tests/test_physim/: test_converter.py  test_diffusion_process.py  test_diffusion_solver.py  test_gradient_field.py  test_solver.py  test_utils.py
(+65 files in other folders)
