[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snake_ai"
version = "0.0.1"
authors = [
  { name="Robin CREMESE", email="robin.cremese@gmail.com" },
]
description = "Snake trained with reinforcement learning to navigate in a complex environment"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#TODO : ajouter des contraintes sur les versions
dependencies = [
  "gymnasium>=0.28",
  "jax>=0.4",
  "jaxlib==0.4.11+cuda12.cudnn88",
  "phiflow>=2.4",
  "pygame>=2.4",
  "mazelib>=0.9",
]

[project.urls]
"Homepage" = "https://github.com/rcremese/snake-ai"

[project.scripts]
play_snake = "snake_ai.wrappers.playable_snake:main"
simulate = "snake_ai.physim.main:simulate"